--- a/content/concl.tex
+++ b/content/concl.tex
@@ -30,7 +30,7 @@ This in turn could be easily translated to two directional synapses with some we
 While in this case local updates are sufficient to keep the weights similar (e.g., applying a similar learning rule to both weights) and research on discrete NNs has shown some automatic weight synchronization in autoencoders \cite{vincent2010stacked}, there is no biological proof.
 The STDP flag determining either completely positive or negative and dividing the training into different phases does not appear to be plausible as well.
 
-Even so this system has many constrains, it might could be counted among one of the more biological plausible deep learning architectures \cite{bengio2015towards}.     
+Even so this system has many constraints, it might could be counted among one of the more biological plausible deep learning architectures \cite{bengio2015towards}.     
 
 \section{Future Work} \label{c:future}
 
@@ -38,7 +38,7 @@ While this system shows promising results on small dataset, there is still a lot
 
 \subsection{Neuromorphic Hardware} \label{c:neuhard}
 
-One of the biggest constrains of the here proposed frameworks is the simulation speed of neural simulations.
+One of the biggest constraints of the here proposed frameworks is the simulation speed of neural simulations.
 One way the training could be speed up is to perform the simulations on dedicated Neuromorphic hardware. 
 There exists a few platforms which could be used, each having different advantages and disadvantages.
 
